// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="---"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        ---
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Basic check check after data ready 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open rc-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox rc-tree-checkbox-checked"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="Light"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        Light
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-checked"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="Bamboo"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            Bamboo
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Basic check check update when Tree trigger componentWillReceiveProps 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-checkbox rc-tree-checkbox-checked"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="parent 1"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        parent 1
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Basic ignore illegal node as Tree children Direct TreeNode 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="00"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        00
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="02"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        02
      </span>
    </span>
  </li>
</ul>
`;

exports[`Tree Basic ignore illegal node as Tree children Sub TreeNode 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher-noop"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
      title="00"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__docu"
      />
      <span
        class="rc-tree-title"
      >
        00
      </span>
    </span>
  </li>
  <li
    class="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="01"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        01
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="010"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            010
          </span>
        </span>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="012"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            012
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Basic renders correctly 1`] = `
<ul
  class="rc-tree forTest rc-tree-show-line"
  role="tree"
  tabindex="0"
  unselectable="on"
>
  <li
    class="spe rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_open"
    />
    <span
      class="rc-tree-checkbox"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      title="parent 1"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        class="rc-tree-title"
      >
        parent 1
      </span>
    </span>
    <ul
      class="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded="true"
      role="group"
    >
      <li
        class="rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="leaf 1"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            leaf 1
          </span>
        </span>
        <ul
          class="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded="true"
          role="group"
        >
          <li
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
          <li
            class="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </li>
        </ul>
      </li>
      <li
        class="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-checkbox rc-tree-checkbox-disabled"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="leaf 2"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            leaf 2
          </span>
        </span>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree Basic renders opaque children correctly 1`] = `
<ul
  class="rc-tree"
  role="tree"
  unselectable="on"
>
  <li
    class="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      class="rc-tree-switcher rc-tree-switcher_close"
    />
    <span
      class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      title="0"
    >
      <span
        class="rc-tree-iconEle rc-tree-icon__close"
      />
      <span
        class="rc-tree-title"
      >
        0
      </span>
    </span>
  </li>
</ul>
`;
